# deeponetx

./: .gitignore  README.md  pyproject.toml
deeponetx/: nn.py  train.py
deeponetx/data/: data.py  function_spaces.py  kernels.py  pde.py  pde_operator.py
examples/: 2dode.py  DeepONet_DR.ipynb  README.md  antiderivative_1d.py  auto_job_run.sh  diffusion_reaction.py  generate_data_deepxde.py  job_run.sh  pyproject.toml  sin_2d.py  two-step-training.py
tests/: test_data.py  test_deeponet.py  test_function_spaces.py  test_kernel.py
