[tool.poetry]
name = "deeponetx"
version = "0.1.0"
description = ""
authors = ["Shao-Ting Chiu <stchiu@email.tamu.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
jax = {extras = ["cuda12"], version = "^0.4.30"}
equinox = "^0.11.4"
optax = "^0.2.2"
tqdm = "^4.66.4"
jaxtyping = "^0.2.31"
interpax = "^0.3.3"


[tool.poetry.group.extras.dependencies]
pytest = "^8.2.2"
matplotlib = "^3.9.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
