[tool.poetry]
package-mode= false
name = "examples"
version = "0.1.0"
description = ""
authors = ["Shao-Ting Chiu <stchiu@email.tamu.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
deeponetx = {path = "../../deeponetx", develop = true}
gstools = "^1.5.2"
deepxde = "^1.11.1"
matplotlib = "^3.9.1"
scipy = "^1.14.0"
diffrax = "^0.6.0"
flax = "^0.8.5"
ipykernel = "^6.29.5"
jax = {extras = ["cuda12"], version = "^0.4.30"}


[tool.poetry.group.extras.dependencies]
ipython = "^8.26.0"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
