[tool.poetry]
package-mode= false
name = "examples"
version = "0.1.0"
description = ""
authors = ["Shao-Ting Chiu <stchiu@email.tamu.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
gstools = "^1.5.2"
matplotlib = "^3.9.1"
scipy = "^1.14.0"
ipykernel = "^6.29.5"
diffrax = "^0.6.0"
deeponetx = {path = "..", develop = true}
flax = "^0.8.5"
jax = {extras = ["cuda12"], version = "^0.4.30"}
deepxde = "^1.11.1"
torch = {version = "^2.3.1+cpu", source = "pytorch_cpu"}
torchvision = {version = "^0.18.1+cpu", source = "pytorch_cpu"}


[tool.poetry.group.extras.dependencies]
ipython = "^8.26.0"
jupyter = "^1.0.0"


[[tool.poetry.source]]
name = "pytorch_cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
