[tool.poetry]
name = "examples"
version = "0.1.0"
description = ""
authors = ["Shao-Ting Chiu <stchiu@email.tamu.edu>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
matplotlib = "^3.9.1"
scipy = "^1.14.0"
diffrax = "^0.6.0"
flax = "^0.8.5"
jax = {extras = ["cuda12"], version = "^0.4.30"}
deepxde = "^1.11.1"
torch = {version = "^2.3.1+cpu", source = "pytorch_cpu"}
deeponetx = {path = "..", develop = true}
equinox = "^0.11.4"
optax = "^0.2.3"
wget = "^3.2"


[[tool.poetry.source]]
name = "pytorch_cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
